--- a/README
+++ b/README
@@ -1,2 +1,22 @@
-git config --global user.name ""
-git config --global user.email ""
+### 简介 ###
+
+#### C ####
+
+### C++ ####
+
+#### erlang ####
+
+#### haskell ####
+
+#### java ####
+
+#### lisp ####
+
+#### objc ####
+
+#### ruby ####
+
+#### smalltalk ####
+
+#### web ####
+
