--- a/kt/jvm/readme
+++ b/kt/jvm/readme
@@ -21,3 +21,5 @@ Source package (default: jvm): kt
 > ./gradlew build --refresh-dependencies
 
 create gradle project with kotlin dsl in intelli idea
+
+> ./gradlew test -i
